continue to crank out gpt-dev.ipynb

--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -97,6 +97,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here are all the unique characters that occur in the text\n",
+    "chars = sorted(list(set(text)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " !$&',-.3:;?ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz\n",
+      "65\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab_size = len(chars)\n",
+    "print(''.join(chars))\n",
+    "print(vocab_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a mapping from characters to integers\n",
+    "stoi = { ch:i for i,ch in enumerate(chars)}\n",
+    "itos = { i:ch for i,ch in enumerate(chars)}\n",
+    "encode = lambda s: [stoi[c] for c in s] # encoder: take a string, output a list of integers\n",
+    "decode = lambda l: ''.join([itos[i] for i in l]) # decoder: take a list of integers, output a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[46, 47, 1, 58, 46, 43, 56, 43]\n",
+      "hi there\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(encode('hi there'))\n",
+    "print(decode(encode('hi there')))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
