--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -240,7 +240,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# resume the video at 12:56 ..."
+   ]
   }
  ],
  "metadata": {
