--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Saturday, June 17, 2023\n",
+    "\n",
+    "docker container start quizzical_swirles\n",
+    "\n",
+    "[Let's build GPT: from scratch, in code, spelled out](https://www.youtube.com/watch?v=kCc8FmEb1nY)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,6 +20,14 @@
    "source": [
     "# Open the source data file\n",
     "dataFile = 'data/shakespeare/input.txt'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reading and exploring the data"
    ]
   },
   {
@@ -34,7 +54,8 @@
     }
    ],
    "source": [
-    "print(f'Length of the dataset: {len(text)}')"
+    "textLength = len(text)\n",
+    "print(f'Length of the dataset: {textLength}')"
    ]
   },
   {
@@ -127,8 +148,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tokenization, train/val split"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +189,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.0.1+cu118'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "torch.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +279,6 @@
    ],
    "source": [
     "#  let's now encode the entire text dataset and store it nto a torch.Tensor\n",
-    "import torch\n",
     "data = torch.tensor(encode(text), dtype=torch.long)\n",
     "print(data.shape, data.dtype)\n",
     "print(data[:1000]) # the 1000 characters we looked at earlier"
@@ -237,12 +286,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# resume the video at 12:56 ..."
+    "# Let's now split up the data into train and validation sets\n",
+    "n = int(0.9*textLength) # first 90% will be train, the rest validation\n",
+    "train_data = data[:n]\n",
+    "val_data = data[n:]"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Loader: Batches of chunks of data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "block_size = 8\n",
+    "train_data[:block_size+1]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
