--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -326,9 +326,168 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "when input is tensor([18]) the target is: 47\n",
+      "when input is tensor([18, 47]) the target is: 56\n",
+      "when input is tensor([18, 47, 56]) the target is: 57\n",
+      "when input is tensor([18, 47, 56, 57]) the target is: 58\n",
+      "when input is tensor([18, 47, 56, 57, 58]) the target is: 1\n",
+      "when input is tensor([18, 47, 56, 57, 58,  1]) the target is: 15\n",
+      "when input is tensor([18, 47, 56, 57, 58,  1, 15]) the target is: 47\n",
+      "when input is tensor([18, 47, 56, 57, 58,  1, 15, 47]) the target is: 58\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = train_data[:block_size]\n",
+    "y = train_data[1:block_size+1]\n",
+    "for t in range(block_size):\n",
+    "    context = x[:t+1]\n",
+    "    target = y[t]\n",
+    "    print(f'when input is {context} the target is: {target}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(1337)\n",
+    "batch_size = 4 # how many independent sequences will we process in parallel?\n",
+    "block_size = 8 # what is the maximum context length for predictions?"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_batch(split):\n",
+    "    # generate a small batch of data of inpus x and targets y\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
+    "    return x,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inputs:\n",
+      "torch.Size([4, 8])\n",
+      "tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+      "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+      "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+      "        [25, 17, 27, 10,  0, 21,  1, 54]])\n",
+      "targets\n",
+      "torch.Size([4, 8])\n",
+      "tensor([[43, 58,  5, 57,  1, 46, 43, 39],\n",
+      "        [53, 56,  1, 58, 46, 39, 58,  1],\n",
+      "        [58,  1, 58, 46, 39, 58,  1, 46],\n",
+      "        [17, 27, 10,  0, 21,  1, 54, 39]])\n",
+      "-----\n"
+     ]
+    }
+   ],
+   "source": [
+    "xb, yb = get_batch('train')\n",
+    "print('inputs:')\n",
+    "print(xb.shape)\n",
+    "print(xb)\n",
+    "print('targets')\n",
+    "print(yb.shape)\n",
+    "print(yb)\n",
+    "\n",
+    "print('-----')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "when input is [24] the target is: 43\n",
+      "when input is [24, 43] the target is: 58\n",
+      "when input is [24, 43, 58] the target is: 5\n",
+      "when input is [24, 43, 58, 5] the target is: 57\n",
+      "when input is [24, 43, 58, 5, 57] the target is: 1\n",
+      "when input is [24, 43, 58, 5, 57, 1] the target is: 46\n",
+      "when input is [24, 43, 58, 5, 57, 1, 46] the target is: 43\n",
+      "when input is [24, 43, 58, 5, 57, 1, 46, 43] the target is: 39\n",
+      "when input is [44] the target is: 53\n",
+      "when input is [44, 53] the target is: 56\n",
+      "when input is [44, 53, 56] the target is: 1\n",
+      "when input is [44, 53, 56, 1] the target is: 58\n",
+      "when input is [44, 53, 56, 1, 58] the target is: 46\n",
+      "when input is [44, 53, 56, 1, 58, 46] the target is: 39\n",
+      "when input is [44, 53, 56, 1, 58, 46, 39] the target is: 58\n",
+      "when input is [44, 53, 56, 1, 58, 46, 39, 58] the target is: 1\n",
+      "when input is [52] the target is: 58\n",
+      "when input is [52, 58] the target is: 1\n",
+      "when input is [52, 58, 1] the target is: 58\n",
+      "when input is [52, 58, 1, 58] the target is: 46\n",
+      "when input is [52, 58, 1, 58, 46] the target is: 39\n",
+      "when input is [52, 58, 1, 58, 46, 39] the target is: 58\n",
+      "when input is [52, 58, 1, 58, 46, 39, 58] the target is: 1\n",
+      "when input is [52, 58, 1, 58, 46, 39, 58, 1] the target is: 46\n",
+      "when input is [25] the target is: 17\n",
+      "when input is [25, 17] the target is: 27\n",
+      "when input is [25, 17, 27] the target is: 10\n",
+      "when input is [25, 17, 27, 10] the target is: 0\n",
+      "when input is [25, 17, 27, 10, 0] the target is: 21\n",
+      "when input is [25, 17, 27, 10, 0, 21] the target is: 1\n",
+      "when input is [25, 17, 27, 10, 0, 21, 1] the target is: 54\n",
+      "when input is [25, 17, 27, 10, 0, 21, 1, 54] the target is: 39\n"
+     ]
+    }
+   ],
+   "source": [
+    "for b in range(batch_size):\n",
+    "    for t in range(block_size):\n",
+    "        context = xb[b, :t+1]\n",
+    "        target = yb[b,t]\n",
+    "        print(f'when input is {context.tolist()} the target is: {target}')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Simplest baseline: bigram language model, loss, generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
