--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -491,7 +491,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f28308e67f0>"
+       "<torch._C.Generator at 0x7f10efe587f0>"
       ]
      },
      "execution_count": 18,
@@ -629,10 +629,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create a PyTorch optimization object\n",
+    "optimizer = torch.optim.AdamW(m.parameters(), lr=1e-3 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.4373364448547363\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size=32\n",
+    "for steps in range(10000):\n",
+    "\n",
+    "    # sample a batch of data\n",
+    "    xb, yb = get_batch('train')\n",
+    "\n",
+    "    # evaluate the loss\n",
+    "    logits, loss = m(xb, yb)\n",
+    "    optimizer.zero_grad(set_to_none=True)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Tailapo belll w anive? nanowalarpe JOFiase ig bo, t ced bere\n",
+      "LLe neset aiemy\n",
+      "I wie yat y mexirourou\n"
+     ]
+    }
+   ],
+   "source": [
+    "torchZeros = torch.zeros((1,1), dtype=torch.long)\n",
+    "print(decode(m.generate(torchZeros, max_new_tokens=100)[0].tolist()))"
+   ]
   }
  ],
  "metadata": {
