beginning the mathematical trick in self attention

--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -687,6 +687,20 @@
     "torchZeros = torch.zeros((1,1), dtype=torch.long)\n",
     "print(decode(m.generate(torchZeros, max_new_tokens=100)[0].tolist()))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The mathematical trick in self-attention"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
