--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -491,7 +491,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f10efe587f0>"
+       "<torch._C.Generator at 0x7fa8f46127f0>"
       ]
      },
      "execution_count": 18,
@@ -639,14 +639,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4373364448547363\n"
+      "2.5727508068084717\n"
      ]
     }
    ],
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -676,10 +676,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "Tailapo belll w anive? nanowalarpe JOFiase ig bo, t ced bere\n",
-      "LLe neset aiemy\n",
-      "I wie yat y mexirourou\n"
+      "Iyoteng h hasbe pave pirance\n",
+      "Rie hicomyonthar's\n",
+      "Plinseard ith henoure wounonthioneir thondy, y helti\n"
      ]
     }
    ],
@@ -697,9 +696,163 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 2])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# consider the following toy example\n",
+    "torch.manual_seed(1337)\n",
+    "B,T,C = 4,8,2 # batch, time, channels\n",
+    "x = torch.randn(B,T,C)\n",
+    "x.shape\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We want x[b,t] = mean_{i<=t} x[b,i]\n",
+    "xbow = torch.zeros((B,T,C)) # xbow because it's a 'bag of words'\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev = x[b, :t+1] # (t,C)\n",
+    "        xbow[b,t] = torch.mean(xprev, dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.3596, -0.9152],\n",
+       "        [ 0.6258,  0.0255],\n",
+       "        [ 0.9545,  0.0643],\n",
+       "        [ 0.3612,  1.1679],\n",
+       "        [-1.3499, -0.5102],\n",
+       "        [ 0.2360, -0.2398],\n",
+       "        [-0.9211,  1.5433]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.0894, -0.4926],\n",
+       "        [ 0.1490, -0.3199],\n",
+       "        [ 0.3504, -0.2238],\n",
+       "        [ 0.3525,  0.0545],\n",
+       "        [ 0.0688, -0.0396],\n",
+       "        [ 0.0927, -0.0682],\n",
+       "        [-0.0341,  0.1332]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.1808), tensor(-0.3596), tensor(0.6258))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0,0,0], x[0,1,0], x[0,2,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.1490)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(x[0,0,0] + x[0,1,0] + x[0,2,0])/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.1490)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow[0,2,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
