--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -721,6 +721,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Version 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -763,6 +771,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.1808), tensor(-0.3596), tensor(0.6258))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0,0,0], x[0,1,0], x[0,2,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -790,46 +818,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor(0.1808), tensor(-0.3596), tensor(0.6258))"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x[0,0,0], x[0,1,0], x[0,2,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.1490)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(x[0,0,0] + x[0,1,0] + x[0,2,0])/3"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -846,6 +834,467 @@
    ],
    "source": [
     "xbow[0,2,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.1490)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(x[0,0,0] + x[0,1,0] + x[0,2,0])/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "a = torch.ones(3,3)\n",
+    "b = torch.randint(0, 10, (3,2)).float()\n",
+    "c = a @ b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=\n",
+      "torch.Size([3, 3])\n",
+      "tensor([[1., 1., 1.],\n",
+      "        [1., 1., 1.],\n",
+      "        [1., 1., 1.]])\n",
+      "b=\n",
+      "torch.Size([3, 2])\n",
+      "tensor([[2., 7.],\n",
+      "        [6., 4.],\n",
+      "        [6., 5.]])\n",
+      "c=a@b\n",
+      "torch.Size([3, 2])\n",
+      "tensor([[14., 16.],\n",
+      "        [14., 16.],\n",
+      "        [14., 16.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a=')\n",
+    "print(a.shape)\n",
+    "print(a)\n",
+    "print('b=')\n",
+    "print(b.shape)\n",
+    "print(b)\n",
+    "print('c=a@b')\n",
+    "print(c.shape)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "a = torch.tril(torch.ones(3,3))\n",
+    "b = torch.randint(0, 10, (3,2)).float()\n",
+    "c = a @ b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=\n",
+      "torch.Size([3, 3])\n",
+      "tensor([[1., 0., 0.],\n",
+      "        [1., 1., 0.],\n",
+      "        [1., 1., 1.]])\n",
+      "b=\n",
+      "torch.Size([3, 2])\n",
+      "tensor([[2., 7.],\n",
+      "        [6., 4.],\n",
+      "        [6., 5.]])\n",
+      "c=a@b\n",
+      "torch.Size([3, 2])\n",
+      "tensor([[ 2.,  7.],\n",
+      "        [ 8., 11.],\n",
+      "        [14., 16.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a=')\n",
+    "print(a.shape)\n",
+    "print(a)\n",
+    "print('b=')\n",
+    "print(b.shape)\n",
+    "print(b)\n",
+    "print('c=a@b')\n",
+    "print(c.shape)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Version 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "a = torch.tril(torch.ones(3,3))\n",
+    "a = a / torch.sum(a, 1, keepdim=True)\n",
+    "b = torch.randint(0, 10, (3,2)).float()\n",
+    "c = a @ b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=\n",
+      "torch.Size([3, 3])\n",
+      "tensor([[1.0000, 0.0000, 0.0000],\n",
+      "        [0.5000, 0.5000, 0.0000],\n",
+      "        [0.3333, 0.3333, 0.3333]])\n",
+      "b=\n",
+      "torch.Size([3, 2])\n",
+      "tensor([[2., 7.],\n",
+      "        [6., 4.],\n",
+      "        [6., 5.]])\n",
+      "c=a@b\n",
+      "torch.Size([3, 2])\n",
+      "tensor([[2.0000, 7.0000],\n",
+      "        [4.0000, 5.5000],\n",
+      "        [4.6667, 5.3333]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a=')\n",
+    "print(a.shape)\n",
+    "print(a)\n",
+    "print('b=')\n",
+    "print(b.shape)\n",
+    "print(b)\n",
+    "print('c=a@b')\n",
+    "print(c.shape)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.5000, 0.5000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3333, 0.3333, 0.3333, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2500, 0.2500, 0.2500, 0.2500, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.0000, 0.0000],\n",
+       "        [0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.0000],\n",
+       "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# weights \n",
+    "wei = torch.tril(torch.ones(T,T))\n",
+    "wei = wei / wei.sum(dim=1, keepdim=True)\n",
+    "wei"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(1.),\n",
+       " tensor(1.),\n",
+       " tensor(1.),\n",
+       " tensor(1.),\n",
+       " tensor(1.),\n",
+       " tensor(1.),\n",
+       " tensor(1.),\n",
+       " tensor(1.))"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# notice ech row sums to 1\n",
+    "wei[0].sum(), wei[1].sum(), wei[2].sum(),wei[3].sum(), wei[4].sum(), wei[5].sum(), wei[6].sum(), wei[7].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.0894, -0.4926],\n",
+       "        [ 0.1490, -0.3199],\n",
+       "        [ 0.3504, -0.2238],\n",
+       "        [ 0.3525,  0.0545],\n",
+       "        [ 0.0688, -0.0396],\n",
+       "        [ 0.0927, -0.0682],\n",
+       "        [-0.0341,  0.1332]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow2 = wei @ x # (B, T, T) @ (B, T, C)\n",
+    "xbow2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.0894, -0.4926],\n",
+       "        [ 0.1490, -0.3199],\n",
+       "        [ 0.3504, -0.2238],\n",
+       "        [ 0.3525,  0.0545],\n",
+       "        [ 0.0688, -0.0396],\n",
+       "        [ 0.0927, -0.0682],\n",
+       "        [-0.0341,  0.1332]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.allclose(xbow, xbow2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 2 Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei =  torch.tril(torch.ones(T,T))\n",
+    "wei = wei / wei.sum(dim=1, keepdim=True)\n",
+    "xbow2 = wei @ x\n",
+    "torch.allclose(xbow, xbow2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Version 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 0., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 0., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 0., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 0., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 1., 0.],\n",
+       "        [1., 1., 1., 1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# use Softmax\n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "tril"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.5000, 0.5000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3333, 0.3333, 0.3333, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2500, 0.2500, 0.2500, 0.2500, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.2000, 0.2000, 0.2000, 0.2000, 0.2000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.1667, 0.0000, 0.0000],\n",
+       "        [0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.1429, 0.0000],\n",
+       "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei = torch.zeros((T, T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "wei"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1808, -0.0700],\n",
+       "        [-0.0894, -0.4926],\n",
+       "        [ 0.1490, -0.3199],\n",
+       "        [ 0.3504, -0.2238],\n",
+       "        [ 0.3525,  0.0545],\n",
+       "        [ 0.0688, -0.0396],\n",
+       "        [ 0.0927, -0.0682],\n",
+       "        [-0.0341,  0.1332]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow3 = wei @ x\n",
+    "xbow3[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.allclose(xbow, xbow3)"
    ]
   },
   {
