beginning self attention

--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -491,7 +491,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fa8f46127f0>"
+       "<torch._C.Generator at 0x7fc00162f8d0>"
       ]
      },
      "execution_count": 18,
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "(tensor(0.1808), tensor(-0.3596), tensor(0.6258))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -807,13 +807,33 @@
        "        [-0.0341,  0.1332]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "xbow[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.1490)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xbow[0,2,0]"
    ]
   },
   {
@@ -833,32 +853,12 @@
     }
    ],
    "source": [
-    "xbow[0,2,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.1490)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "(x[0,0,0] + x[0,1,0] + x[0,2,0])/3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
        "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
        " tensor(1.))"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
        "        [-0.0341,  0.1332]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
        "        [-0.0341,  0.1332]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
        "True"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
        "True"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1192,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1228,7 @@
        "        [1., 1., 1., 1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1241,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei = torch.zeros((T, T))\n",
+    "wei"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., -inf, -inf, -inf, -inf, -inf, -inf, -inf],\n",
+       "        [0., 0., -inf, -inf, -inf, -inf, -inf, -inf],\n",
+       "        [0., 0., 0., -inf, -inf, -inf, -inf, -inf],\n",
+       "        [0., 0., 0., 0., -inf, -inf, -inf, -inf],\n",
+       "        [0., 0., 0., 0., 0., -inf, -inf, -inf],\n",
+       "        [0., 0., 0., 0., 0., 0., -inf, -inf],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., -inf],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1237,21 +1313,19 @@
        "        [0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250, 0.1250]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wei = torch.zeros((T, T))\n",
-    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
     "wei = F.softmax(wei, dim=-1)\n",
     "wei"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1341,7 @@
        "        [-0.0341,  0.1332]])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1288,13 +1362,52 @@
        "True"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "torch.allclose(xbow, xbow3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The CRUX of this Video!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 32])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Version 4: self attention!\n",
+    "torch.manual_seed(1337)\n",
+    "B, T, C = 4, 8, 32 # batch, time, channels\n",
+    "x = torch.randn(B, T, C)\n",
+    "\n",
+    "tril = torch.tril(torch.ones(T,T))\n",
+    "wei = torch.zeros((T, T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=1)\n",
+    "out = wei @ x\n",
+    "\n",
+    "out.shape\n"
    ]
   },
   {
